--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -13,9 +13,9 @@
 		<link rel="stylesheet" href="stylesheets/app.css" />
  		<script type="text/javascript" src="javascripts/vendor.js"></script>
  		<script type="text/javascript" src="javascripts/app.js"></script>
+        <script>require('initialize');</script>
 	</head>
     <body>
-    	sdfhbsdjf
-		<div id="content"></div>
+    	<h2>Hello there</h2>
     </body>
 </html>
