--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -11,11 +11,10 @@
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
 		<link rel="stylesheet" href="stylesheets/app.css" />
+
  		<script type="text/javascript" src="javascripts/vendor.js"></script>
  		<script type="text/javascript" src="javascripts/app.js"></script>
         <script>require('initialize');</script>
 	</head>
-    <body>
-    	<h2>Hello there</h2>
-    </body>
+    <body></body>
 </html>
