--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
 
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
-		<link rel="stylesheet" href="stylesheets/app.css" />
+		<link rel="stylesheet" href="/stylesheets/app.css" />
 
- 		<script type="text/javascript" src="javascripts/vendor.js"></script>
- 		<script type="text/javascript" src="javascripts/app.js"></script>
+ 		<script type="text/javascript" src="/javascripts/vendor.js"></script>
+ 		<script type="text/javascript" src="/javascripts/app.js"></script>
         <script>require('initialize');</script>
 	</head>
     <body></body>
