--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -3,9 +3,9 @@
 	   	<meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        <title>Printiculo</title>
+        <title>StevieWhale</title>
 
-        <meta name="description" content="Printiculo">
+        <meta name="description" content="StevieWhale">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
