--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
 
 		<link rel="stylesheet" href="/stylesheets/app.css" />
 
+        <!-- Font awesome -->
+        <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+
  		<script type="text/javascript" src="/javascripts/vendor.js"></script>
  		<script type="text/javascript" src="/javascripts/app.js"></script>
         <script>require('initialize');</script>
