Animated waves and Stevie; Added mdash to the title

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>StevieWhale - Кит по имени Стиви</title>
+    <title>StevieWhale &mdash; Кит по имени Стиви</title>
 
     <meta name="description" content="StevieWhale">
     <meta name="viewport" content="width=device-width, initial-scale=1">
