--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <html>
-  <head>  
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -10,6 +10,8 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/stylesheets/app.css" />
+
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300|Roboto+Slab:400,100&subset=latin,cyrillic-ext,cyrillic' rel='stylesheet' type='text/css'>
 
     <!-- Font awesome -->
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
