--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/stylesheets/app.css" />
 
-    <!-- Font awesome -->
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-
+    <link href="http://code.ionicframework.com/ionicons/1.4.1/css/ionicons.min.css" rel="stylesheet">
+    
     <script type="text/javascript" src="/javascripts/vendor.js"></script>
     <script type="text/javascript" src="/javascripts/app.js"></script>
     <script>require('initialize');</script>
