--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -6,7 +6,7 @@
     <title>StevieWhale &mdash; Кит по имени Стиви</title>
 
     <meta name="description" content="StevieWhale">
-    <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
 
     <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700|PT+Sans+Narrow:400,700|PT+Sans+Caption:400,700&subset=latin,cyrillic-ext,cyrillic' rel='stylesheet' type='text/css'>
 
